<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">计时器</string>
    <string name="start">开始</string>
    <string name="pause">暂停</string>
    <string name="reset">重置</string>
    <string name="elapsed_label">已计时</string>
</resources>
